@@ -1,3 +1,7 @@
+- Add a new command 'timer' which executes a macro every n seconds.  I use
+  this for periodically injecting a command into a shell window for
+  overnight testing of some device.
+
 - Convert double to long long (if we have it) when printing hexadecimal.
 
 - Fix bug where undo was acting strangly in shell windows.
